homelab/kubernetes/observability/otel-collector-agent.yaml
---
apiVersion: v1
kind: Service
metadata:
  name: otel-collector-agent
  namespace: observability
  labels:
    app: otel-collector-agent
spec:
  ports:
    - name: otlp-grpc
      port: 4317
      targetPort: 4317
      protocol: TCP
      appProtocol: grpc
    - name: otlp-http
      port: 4318
      targetPort: 4318
      protocol: TCP
      appProtocol: http
    - name: metrics
      port: 8888
      targetPort: 8888
      protocol: TCP
    - name: jaeger-compact
      port: 6831
      targetPort: 6831
      protocol: UDP
    - name: jaeger-grpc
      port: 14250
      targetPort: 14250
      protocol: TCP
      appProtocol: grpc
    - name: jaeger-thrift
      port: 14268
      targetPort: 14268
      protocol: TCP
    - name: zipkin
      port: 9411
      targetPort: 9411
      protocol: TCP
  selector:
    app: otel-collector-agent

---
apiVersion: apps/v1
kind: DaemonSet
metadata:
  name: otel-collector-agent
  namespace: observability
  labels:
    app: otel-collector-agent
spec:
  selector:
    matchLabels:
      app: otel-collector-agent
  template:
    metadata:
      labels:
        app: otel-collector-agent
      annotations:
        prometheus.io/scrape: "true"
        prometheus.io/port: "8888"
    spec:
      priorityClassName: system-node-critical
      serviceAccountName: otel-collector-agent
      automountServiceAccountToken: true
      imagePullSecrets:
        - name: staffbase-registries
      containers:
        - name: otel-collector-agent
          image: registry.homelab.ricoberger.dev:5555/otel-collector-agent:v0.142.0
          imagePullPolicy: Always
          args:
            - --config=/otel-collector/config/config.yaml
          ports:
            - name: otlp-grpc
              containerPort: 4317
              protocol: TCP
            - name: otlp-http
              containerPort: 4318
              protocol: TCP
            - name: metrics
              containerPort: 8888
              protocol: TCP
            - name: health
              containerPort: 13133
              protocol: TCP
            - name: zpages
              containerPort: 55679
              protocol: TCP
            - name: jaeger-compact
              containerPort: 6831
              protocol: UDP
            - name: jaeger-grpc
              containerPort: 14250
              protocol: TCP
            - name: jaeger-thrift
              containerPort: 14268
              protocol: TCP
            - name: zipkin
              containerPort: 9411
              protocol: TCP
          readinessProbe:
            httpGet:
              path: /
              port: health
          resources:
            limits:
              memory: 512Mi
            requests:
              cpu: 100m
              memory: 128Mi
          securityContext:
            allowPrivilegeEscalation: false
            capabilities:
              drop:
                - ALL
            privileged: false
            seccompProfile:
              type: RuntimeDefault
          volumeMounts:
            - name: varlogpods
              mountPath: /var/log/pods
              readOnly: true
            - name: varlibdockercontainers
              mountPath: /var/lib/docker/containers
              readOnly: true
            - name: filestorage
              mountPath: /var/lib/otel-collector-agent
            - name: config
              mountPath: /otel-collector/config
      tolerations:
        - operator: Exists
      volumes:
        - name: varlogpods
          hostPath:
            path: /var/log/pods
        - name: varlibdockercontainers
          hostPath:
            path: /var/lib/docker/containers
        - hostPath:
            path: /var/lib/otel-collector-agent
            type: DirectoryOrCreate
          name: filestorage
        - configMap:
            name: otel-collector-agent
            items:
              - key: config.yaml
                path: config.yaml
          name: config
