homelab/kubernetes/observability/grafana.yaml
---
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: grafana
  namespace: observability
spec:
  parentRefs:
    - name: istio-ingress
      namespace: istio-ingress
  hostnames:
    - "grafana.homelab.ricoberger.dev"
  rules:
    - backendRefs:
        - name: grafana-service
          port: 3000
