homelab/kubernetes/observability/kiali.yaml
---
apiVersion: v1
kind: Service
metadata:
  name: kiali
  namespace: observability
  labels:
    app: kiali
    version: v2.19.0
    app.kubernetes.io/name: kiali
    app.kubernetes.io/instance: kiali
    app.kubernetes.io/part-of: kiali
spec:
  ports:
    - name: http
      appProtocol: http
      protocol: TCP
      port: 20001
    - name: http-metrics
      appProtocol: http
      protocol: TCP
      port: 9090
  selector:
    app.kubernetes.io/name: kiali
    app.kubernetes.io/instance: kiali

---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: kiali
  namespace: observability
  labels:
    app: kiali
    version: v2.19.0
    app.kubernetes.io/name: kiali
    app.kubernetes.io/instance: kiali
    app.kubernetes.io/part-of: kiali
spec:
  replicas: 1
  selector:
    matchLabels:
      app.kubernetes.io/name: kiali
      app.kubernetes.io/instance: kiali
  strategy:
    rollingUpdate:
      maxSurge: 1
      maxUnavailable: 1
    type: RollingUpdate
  template:
    metadata:
      name: kiali
      labels:
        app: kiali
        version: v2.19.0
        app.kubernetes.io/name: kiali
        app.kubernetes.io/instance: kiali
        app.kubernetes.io/part-of: kiali
      annotations:
        prometheus.io/scrape: "true"
        prometheus.io/port: "9090"
        kiali.io/dashboards: go,kiali
        proxy.istio.io/config: '{ "holdApplicationUntilProxyStarts": true }'
    spec:
      serviceAccountName: kiali
      containers:
        - image: quay.io/kiali/kiali:v2.19.0
          imagePullPolicy: IfNotPresent
          name: kiali
          command:
            - "/opt/kiali/kiali"
            - "-config"
            - "/kiali-configuration/config.yaml"
          terminationMessagePolicy: FallbackToLogsOnError
          securityContext:
            allowPrivilegeEscalation: false
            privileged: false
            readOnlyRootFilesystem: true
            runAsNonRoot: true
            capabilities:
              drop:
                - ALL
          ports:
            - name: api-port
              containerPort: 20001
            - name: http-metrics
              containerPort: 9090
          readinessProbe:
            httpGet:
              path: /kiali/healthz
              port: api-port
              scheme: HTTP
            initialDelaySeconds: 5
            periodSeconds: 30
          livenessProbe:
            httpGet:
              path: /kiali/healthz
              port: api-port
              scheme: HTTP
            initialDelaySeconds: 5
            periodSeconds: 30
          startupProbe:
            httpGet:
              path: /kiali/healthz
              port: api-port
              scheme: HTTP
            failureThreshold: 6
            initialDelaySeconds: 30
            periodSeconds: 10
          volumeMounts:
            - name: kiali-configuration
              mountPath: "/kiali-configuration"
            - name: kiali-cert
              mountPath: "/kiali-cert"
            - name: kiali-secret
              mountPath: "/kiali-secret"
            - name: kiali-cabundle
              mountPath: "/kiali-cabundle"
            - name: "kiali-multi-cluster-secret"
              mountPath: "/kiali-remote-cluster-secrets/kiali-multi-cluster-secret"
              readOnly: true
          resources:
            limits:
              memory: 1Gi
            requests:
              cpu: 10m
              memory: 64Mi
      volumes:
        - name: kiali-configuration
          configMap:
            name: kiali
        - name: kiali-cert
          secret:
            secretName: istio.kiali-service-account
            optional: true
        - name: kiali-secret
          secret:
            secretName: kiali
            optional: true
        - name: kiali-cabundle
          configMap:
            name: kiali-cabundle
            optional: true
        - name: "kiali-multi-cluster-secret"
          secret:
            secretName: "kiali-multi-cluster-secret"
            optional: true

---
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: kiali
  namespace: observability
spec:
  parentRefs:
    - name: istio-ingress
      namespace: istio-ingress
  hostnames:
    - "kiali.homelab.ricoberger.dev"
  rules:
    - backendRefs:
        - name: kiali
          port: 20001
